<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_edit_text"
            android:hint="@string/id_input"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/LoginPadding"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:hint="@string/password_input"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/LoginPadding"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password_re_edit_text"
            android:hint="@string/password_re_input"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/LoginPadding"
            android:inputType="textPassword"
            android:layout_marginBottom="40dp"/>

        <Button
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up_button"
            android:background="@color/colorPrimary"
            android:textSize="16sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/LoginPadding" />

    </LinearLayout>

</layout>
